[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/scene_change_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level.gd" type="Script" id=2]
[ext_resource path="res://src/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://src/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/next_level.gd" type="Script" id=37]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=38]
[ext_resource path="res://src/restart.gd" type="Script" id=39]

[node name="level_2" type="Node2D"]
script = ExtResource( 2 )

[node name="tilemap" type="TileMap" parent="."]
modulate = Color( 0.788235, 0.788235, 0.788235, 0.784314 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 458762, 0, 0, 458768, 8, 0, 458772, 8, 0, 458773, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0 )

[node name="player" parent="." instance=ExtResource( 10 )]
x = 11
y = 7

[node name="menu" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 56.0
text = "menu"
scene_path = "res://src/ui/menu.tscn"

[node name="next_level" type="Button" parent="."]
margin_left = 904.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( -440, 240 )
theme = ExtResource( 38 )
disabled = true
text = "next level"
script = ExtResource( 37 )

[node name="Label" type="Label" parent="."]
margin_left = 448.0
margin_top = 16.0
margin_right = 577.0
margin_bottom = 85.0
theme = ExtResource( 38 )
text = "level 2

respective color"
align = 1

[node name="restart" type="Button" parent="."]
margin_left = 8.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 112.0
theme = ExtResource( 38 )
text = "restart"
script = ExtResource( 39 )

[connection signal="tree_entered" from="." to="." method="_on_level_tree_entered"]
[connection signal="settings_changed" from="tilemap" to="." method="_on_tilemap_settings_changed"]
[connection signal="end_moving" from="player" to="." method="_on_player_end_moving"]
[connection signal="move" from="player" to="." method="_on_player_move"]
[connection signal="button_up" from="next_level" to="next_level" method="_on_next_level_button_up"]
[connection signal="button_up" from="restart" to="restart" method="_on_restart_button_up"]
